force-app/main/default/objects/Regional_Routes__c/Regional_Routes__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Regional Routes</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regional Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>