force-app/main/default/objects/Regional_Routes__c/fields/AA_Flights__c.field-meta.xml
<CustomField>
    <fullName>AA_Flights__c</fullName>
    <label>AA Flights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>