force-app/main/default/objects/Regional_Routes__c/fields/AA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>AA_Revenue__c</fullName>
    <label>AA Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>