force-app/main/default/objects/Regional_Routes__c/fields/AA_Yield_LY__c.field-meta.xml
<CustomField>
    <fullName>AA_Yield_LY__c</fullName>
    <formula>IF(AA_RPK_LY__c = 0, NULL,
(AA_Revenue_LY__c  /  AA_RPK_LY__c) *100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AA Yield (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>