force-app/main/default/objects/Regional_Routes__c/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regional Routes</relationshipLabel>
    <relationshipName>Regional_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>