force-app/main/default/objects/Regional_Routes__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <formula>VALUE( Dest_number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>