force-app/main/default/objects/Regional_Routes__c/fields/Dest_number__c.field-meta.xml
<CustomField>
    <fullName>Dest_number__c</fullName>
    <formula>Case(  Destination__c , &quot;ARM&quot;,&quot;1&quot;,&quot;EMD&quot;,&quot;2&quot;,&quot;GLT&quot;,&quot;3&quot;,&quot;MKY&quot;,&quot;4&quot;,&quot;MOV&quot;,&quot;5&quot;,&quot;ISA&quot;,&quot;6&quot;,&quot;RMA&quot;,&quot;7&quot;, &quot;MCY&quot;,&quot;8&quot;,&quot;TMW&quot;,&quot;9&quot;, &quot;TWB&quot;,&quot;10&quot;, &quot;TSV&quot;,&quot;11&quot;, &quot;WEI&quot;,&quot;12&quot;,&quot;99&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dest number</label>
    <type>Text</type>
</CustomField>