force-app/main/default/objects/Regional_Routes__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <formula>RIGHT( O_D_Pair__c , 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination</label>
    <type>Text</type>
</CustomField>