force-app/main/default/objects/Regional_Routes__c/fields/EK_RPK__c.field-meta.xml
<CustomField>
    <fullName>EK_RPK__c</fullName>
    <label>EK RPK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>