force-app/main/default/objects/Regional_Routes__c/fields/EK_Yield__c.field-meta.xml
<CustomField>
    <fullName>EK_Yield__c</fullName>
    <formula>IF(EK_RPK__c = 0, NULL,
(EK_Revenue__c / EK_RPK__c) *100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EK Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>