force-app/main/default/objects/Regional_Routes__c/fields/EK_Yield_LY__c.field-meta.xml
<CustomField>
    <fullName>EK_Yield_LY__c</fullName>
    <formula>IF(EK_RPK_LY__c = 0, NULL,
(EK_Revenue_LY__c / EK_RPK_LY__c) *100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EK Yield (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>