force-app/main/default/objects/Regional_Routes__c/fields/INT_Share_Target_This_FY__c.field-meta.xml
<CustomField>
    <fullName>INT_Share_Target_This_FY__c</fullName>
    <formula>IF ( CONTAINS ( Network__c,&quot;International&quot;), 0.572,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INT Share Target This FY</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>