force-app/main/default/objects/Regional_Routes__c/fields/JQ_Flights_LY__c.field-meta.xml
<CustomField>
    <fullName>JQ_Flights_LY__c</fullName>
    <label>JQ Flights (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>