force-app/main/default/objects/Regional_Routes__c/fields/JQ_Revenue__c.field-meta.xml
<CustomField>
    <fullName>JQ_Revenue__c</fullName>
    <label>JQ Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>