force-app/main/default/objects/Regional_Routes__c/fields/JQ_RPK_LY__c.field-meta.xml
<CustomField>
    <fullName>JQ_RPK_LY__c</fullName>
    <label>JQ RPK (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>