force-app/main/default/objects/Regional_Routes__c/fields/LY_Date__c.field-meta.xml
<CustomField>
    <fullName>LY_Date__c</fullName>
    <description>Determines date for last day of month for last year. Takes into account leap years.</description>
    <formula>DATE(
VALUE( Period_Year__c)-1, VALUE(Month_No__c), 
CASE(VALUE(Month_No__c),
2, 
  IF(
     OR( 
       MOD( VALUE( Period_Year__c)-1, 400 ) = 0, 
       AND( 
        MOD( VALUE( Period_Year__c)-1, 4 ) = 0,
         MOD( VALUE( Period_Year__c)-1, 100 ) != 0
       )
     ), 29, 28),
4, 30,
6, 30,
9, 30,
11, 30, 
31)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date for LY travel data</inlineHelpText>
    <label>LY Date</label>
    <type>Date</type>
</CustomField>