force-app/main/default/objects/Regional_Routes__c/fields/MAT_CM__c.field-meta.xml
<CustomField>
    <fullName>MAT_CM__c</fullName>
    <label>MAT(CM)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>