force-app/main/default/objects/Regional_Routes__c/fields/Month_No__c.field-meta.xml
<CustomField>
    <fullName>Month_No__c</fullName>
    <formula>CASE(Period_Month__c,
&quot;Jan&quot;, &quot;01&quot;,
&quot;Feb&quot;, &quot;02&quot;,
&quot;Mar&quot;, &quot;03&quot;,
&quot;Apr&quot;, &quot;04&quot;,
&quot;May&quot;, &quot;05&quot;,
&quot;Jun&quot;, &quot;06&quot;,
&quot;Jul&quot;, &quot;07&quot;,
&quot;Aug&quot;, &quot;08&quot;,
&quot;Sep&quot;, &quot;09&quot;,
&quot;Oct&quot;, &quot;10&quot;,
&quot;Nov&quot;, &quot;11&quot;,
&quot;Dec&quot;, &quot;12&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month No</label>
    <type>Text</type>
</CustomField>