force-app/main/default/objects/Regional_Routes__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Route Pair Month and Year for this year (TY). LY is Month Year minus 12 months.</inlineHelpText>
    <label>Month Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>