force-app/main/default/objects/Regional_Routes__c/fields/O__c.field-meta.xml
<CustomField>
    <fullName>O__c</fullName>
    <formula>VALUE( Origin_number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>O</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>