force-app/main/default/objects/Regional_Routes__c/fields/Period_Month__c.field-meta.xml
<CustomField>
    <fullName>Period_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period Month</label>
    <length>3</length>
    <type>Text</type>
</CustomField>