force-app/main/default/objects/Regional_Routes__c/fields/QCI_ID__c.field-meta.xml
<CustomField>
    <fullName>QCI_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Qantas Corporate Identifier</inlineHelpText>
    <label>QCI ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>