force-app/main/default/objects/Regional_Routes__c/fields/QF_Average_Fare_VLY_Perc__c.field-meta.xml
<CustomField>
    <fullName>QF_Average_Fare_VLY_Perc__c</fullName>
    <formula>(QF_Average_Fare__c - QF_Average_Fare_LY__c) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Average Fare (VLY %)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>