force-app/main/default/objects/Regional_Routes__c/fields/QF_Flights_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_Flights_LY__c</fullName>
    <label>QF Flights (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>