force-app/main/default/objects/Regional_Routes__c/fields/QF_Flights_Share_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_Flights_Share_LY__c</fullName>
    <formula>IF(Total_Flights_LY__c != 0,QF_Flights_LY__c / Total_Flights_LY__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Flights Share (LY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>