force-app/main/default/objects/Regional_Routes__c/fields/QF_MCA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QF_MCA_Revenue__c</fullName>
    <label>QF MCA Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>