force-app/main/default/objects/Regional_Routes__c/fields/QF_MCA_Yield__c.field-meta.xml
<CustomField>
    <fullName>QF_MCA_Yield__c</fullName>
    <formula>IF(QF_MCA_RPK__c=0,NULL,
(QF_MCA_Revenue__c / QF_MCA_RPK__c) *100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF MCA Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>