force-app/main/default/objects/Regional_Routes__c/fields/QF_On_Time_Departures__c.field-meta.xml
<CustomField>
    <fullName>QF_On_Time_Departures__c</fullName>
    <label>QF On Time Departures</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>