force-app/main/default/objects/Regional_Routes__c/fields/QF_Revenue_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue_Market_Share__c</fullName>
    <formula>IF(Total_Air_Travel_Spend__c != 0,QF_Revenue__c /  Total_Air_Travel_Spend__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Market share of revenue - Qantas Revenue / Total carrier air travel spend</inlineHelpText>
    <label>QF Revenue Market Share</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>