force-app/main/default/objects/Regional_Routes__c/fields/QF_Revenue_Market_Share_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue_Market_Share_LY__c</fullName>
    <formula>IF(Total_Air_Travel_Spend_LY__c != 0,QF_Revenue_LY__c / Total_Air_Travel_Spend_LY__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Revenue Market Share (LY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>