force-app/main/default/objects/Regional_Routes__c/fields/QF_Revenue_VLY__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue_VLY__c</fullName>
    <formula>QF_Revenue__c - QF_Revenue_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Revenue (VLY $)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>