force-app/main/default/objects/Regional_Routes__c/fields/QF_Yield_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_Yield_LY__c</fullName>
    <formula>IF(QF_RPK_LY__c!=0,(QF_Revenue_LY__c / QF_RPK_LY__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Yield (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>