force-app/main/default/objects/Regional_Routes__c/fields/QF_Yield_VLY__c.field-meta.xml
<CustomField>
    <fullName>QF_Yield_VLY__c</fullName>
    <formula>IF(QF_Yield_LY__c != 0,(QF_Yield__c / QF_Yield_LY__c) -1,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Yield (VLY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>