force-app/main/default/objects/Regional_Routes__c/fields/Regional_Account__c.field-meta.xml
<CustomField>
    <fullName>Regional_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Regional Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regional Routes (Regional Account)</relationshipLabel>
    <relationshipName>Regional_Routes1</relationshipName>
    <type>Lookup</type>
</CustomField>