force-app/main/default/objects/Regional_Routes__c/fields/Total_Air_Travel_Spend_LY__c.field-meta.xml
<CustomField>
    <fullName>Total_Air_Travel_Spend_LY__c</fullName>
    <label>Total Air Travel Spend (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>