force-app/main/default/objects/Regional_Routes__c/fields/Total_Yield__c.field-meta.xml
<CustomField>
    <fullName>Total_Yield__c</fullName>
    <formula>IF(Total_RPK__c != 0,(Total_Air_Travel_Spend__c / Total_RPK__c), null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>