force-app/main/default/objects/Regional_Routes__c/fields/Total_Yield_LY__c.field-meta.xml
<CustomField>
    <fullName>Total_Yield_LY__c</fullName>
    <formula>IF(Total_RPK_LY__c !=0, (Total_Air_Travel_Spend_LY__c /  Total_RPK_LY__c)*100,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Yield (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>