force-app/main/default/objects/Regional_Routes__c/fields/VA_Cancellation_Rate_LY__c.field-meta.xml
<CustomField>
    <fullName>VA_Cancellation_Rate_LY__c</fullName>
    <label>VA Cancellation Rate (LY)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>