force-app/main/default/objects/Regional_Routes__c/fields/VA_On_Time_Departures__c.field-meta.xml
<CustomField>
    <fullName>VA_On_Time_Departures__c</fullName>
    <label>VA On Time Departures</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>