force-app/main/default/objects/Regional_Routes__c/fields/Yield_Premium__c.field-meta.xml
<CustomField>
    <fullName>Yield_Premium__c</fullName>
    <formula>IF(YY_Yield__c != 0,(QF_Yield__c / YY_Yield__c)-1,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield Premium</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>