force-app/main/default/objects/Regional_Routes__c/fields/Yield_Premium_VLY__c.field-meta.xml
<CustomField>
    <fullName>Yield_Premium_VLY__c</fullName>
    <formula>IF(Yield_Premium_LY__c != 0,(Yield_Premium__c  /  Yield_Premium_LY__c) -1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield Premium (VLY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>