force-app/main/default/objects/Regional_Routes__c/fields/YY_Revenue_Combined__c.field-meta.xml
<CustomField>
    <fullName>YY_Revenue_Combined__c</fullName>
    <formula>AA_Revenue__c  +  EK_Revenue__c  +  JQ_Revenue__c  +  YY_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Revenue Combined</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>