force-app/main/default/objects/Regional_Routes__c/fields/YY_Revenue_DOM_combined__c.field-meta.xml
<CustomField>
    <fullName>YY_Revenue_DOM_combined__c</fullName>
    <formula>AA_RPK__c + EK_RPK__c + JQ_RPK__c + YY_RPK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Revenue DOM combined</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>